# homework2

./: pyproject.toml
src/processing/: README.md  main.py
