[project]
name = "homework2"
version = "0.1.0"
description = ""
authors = [
    {name = "annak",email = "annakuksofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)"
]
